HelloUltraviolet/Fixtures/RejectedSource/Expressions/ExternCallUnsafeRequirement/Expected.uv
//! Expected diagnostic metadata for the ExternCallUnsafeRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-2106", "req.16.ExternProcedureCallsRequireUnsafe")
